kubectl/dither/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dither
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dither
  template:
    metadata:
      labels:
        app: dither
    spec:
      containers:
        - name: dither
          image: golang:1.24-alpine
          command:
            - sh
            - -c
            - |
              apk add --no-cache ca-certificates && \
              /app/main --port 8080
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "256Mi"
              cpu: "500m"  
          volumeMounts:
            - mountPath: /app
              name: app-binary
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 15
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"    
          effect: "NoExecute"    
          tolerationSeconds: 15          
      volumes:
        - name: app-binary
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: dither-service-tcp
  annotations:
    metallb.io/address-pool: internal-pool
    metallb.io/allow-shared-ip: "shared-ip"
spec:
  type: LoadBalancer
  selector:
    app: dither
  ports:
    - name: http
      port: 8085
      targetPort: 8080
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dither-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - dither.joeberry.org
  rules:
  - host: dither.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dither-service-tcp
            port:
              number: 8085
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dither-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: dither.joeberry.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dither-service-tcp
            port:
              number: 8085
